[package]
name = "almk"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
git2 = "0.20.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
toml = "0.9.11"
ureq = "2.9.6"
walkdir = "2.5.0"
zip = "7.2.0"
